thrift point: gcd algo supported
Signed-off-by: Dark Wang <dkfire30@outlook.com>

--- a/points/thrift-cpp/server/Makefile
+++ b/points/thrift-cpp/server/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -o demo gen-cpp/WorkerManager_server.skeleton.cpp gen-cpp/WorkerManager.cpp -lthrift
+	g++ -Wall -Werror -o demo gen-cpp/WorkerManager_server.skeleton.cpp gen-cpp/WorkerManager.cpp -lthrift
 
 clean:
 	@rm -vf demo
